[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://MLTiles.tres" type="TileSet" id=2]
[ext_resource path="res://Camera2D.gd" type="Script" id=3]
[ext_resource path="res://Player.gd" type="Script" id=4]
[ext_resource path="res://MLTiles.png" type="Texture" id=5]
[ext_resource path="res://BackButton.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1

[node name="Items" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1

[node name="UpWall" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1

[node name="DownWall" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1

[node name="LeftWall" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1

[node name="RightWall" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 264.716, 135.209 )
current = true
script = ExtResource( 3 )

[node name="Player" type="StaticBody2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 5 )
offset = Vector2( 32, 32 )
region_enabled = true
region_rect = Rect2( 64, 0, 64, 64 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_right = 103.0
margin_bottom = 66.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
margin_right = 100.0
margin_bottom = 71.0
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 7.0
margin_right = 100.0
margin_bottom = 21.0
text = "Training Cycle"
align = 1

[node name="Label2" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 25.0
margin_right = 100.0
margin_bottom = 39.0
text = "0"
align = 1

[node name="back" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 43.0
margin_right = 100.0
margin_bottom = 63.0
text = "Back"
script = ExtResource( 6 )

